--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,14 +2,38 @@ body {
 }
 
 header {
-  background: #efefef;
-  padding: 1em;
+    background: #efefef;
+    padding: 1em;
 }
 
 .container {
-  padding: 1em;
+    padding: 1em;
 }
 
 header h1 {
-  margin-top: 0;
+    margin-top: 0;
+}
+
+table {
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 100%;
+    margin: auto;
+}
+
+.new_table th {
+    background-color: darkgrey;
+    color: black;
+    width: 50%;
+    text-align: left;
+}
+
+.new_table tr:nth-child(even) td {
+    background-color: lightgray;
+    color: black;
+}
+
+.new_table tr:nth-child(odd) td {
+    background-color: white;
+    color: black;
 }
